# plotly-venn

./: .gitignore  LICENSE  MANIFEST.in  README.md  plotly_venn.py  pyproject.toml  requirements.txt  test.ipynb
plotly_venn/: __init__.py  plotly_venn.py
