[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plotly-venn"
version = "1.0.0"
description = "Tiny helper to build a 2-set Venn diagram with Plotly"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "rblch"}
]
keywords = ["plotly", "venn", "diagram", "visualization"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "plotly", "nbformat",
]

[project.urls]
Homepage = "https://github.com/rblch/plotly-venn"
Repository = "https://github.com/rblch/plotly-venn"
Issues = "https://github.com/rblch/plotly-venn/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["plotly_venn*"]
exclude = ["tests*"]
